# aichan

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  cli.py  cli_client.py  cli_server.py  docker-compose.yml  main.py  pyproject.toml
adapter-service/: Dockerfile  config.yml  pyproject.toml
adapter-service/src/adapter_service/: __init__.py  app.py  config.py  main.py  mcp_main.py
adapter-service/src/adapter_service/mcp/: __init__.py  client.py
adapter-service/src/adapter_service/router/: router.py  schemas.py
adapter-service/src/adapter_service/services/: __init__.py  action_consumer.py  connection_state.py  errors.py  napcat_ws_gateway.py  redis_stream.py
adapter-service/tests/: test_action_consumer.py  test_adapter_service.py  test_mcp_client.py  test_mcp_main.py  test_napcat_gateway.py  test_router.py
agent-service/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.yml  pyproject.toml
agent-service/src/agent_service/: __init__.py  api.py  app.py  config.py  logger.py  main.py  prompts.py  system-prompt.md
agent-service/src/agent_service/agent/: __init__.py  agent_core.py  llm_client.py  mcp_gateway.py  messages_list.py  tool_registry.py  types.py
agent-service/src/agent_service/agent_core/: __init__.py  agent_core.py  llm_client.py  messages_storage.py  tool_registry.py  types.py
agent-service/src/agent_service/app/: __init__.py  app.py  config.py
agent-service/src/agent_service/prompts/: system-prompt.md
agent-service/src/agent_service/router/: router.py  schemas.py
agent-service/src/agent_service/services/: __init__.py  agent_core.py  llm_client.py  mcp_gateway.py  prompts.py
agent-service/src/agent_service/services/types/: __init__.py  llm.py  session.py
agent-service/tests/: test_agent_core.py  test_router.py
aichan/: .env.example  Dockerfile  main.py  pyproject.toml
aichan/agent/: pyproject.toml
aichan/agent/src/agent/: __init__.py  agent_runtime.py  prompt_templates.py  runtime_context.py  runtime_cycle.py  runtime_graph.py  runtime_loop.py  runtime_rules.py  wakeup_runtime.py
aichan/agent/tests/: test_wakeup_runtime.py
aichan/core/src/core/: __init__.py  config.py  entities.py  http_client.py  logger.py
aichan/mcp_hub/: pyproject.toml
aichan/mcp_hub/src/mcp_hub/: __init__.py  connections.py  manager.py  models.py  session.py  tool_catalog.py  tool_executor.py  tools_wrapper.py  wakeup.py
aichan/mcp_hub/tests/: test_manager_notifications.py
aichan/memory/src/memory/: __init__.py  store.py
aichan/plugins/src/plugins/: registry.py
aichan/plugins/src/plugins/channels/cli/: __init__.py  client.py  models.py  plugin.py
aichan/signal_hub/: pyproject.toml
aichan/signal_hub/src/signal_hub/: __init__.py  channel_poll_trigger.py  signal_hub.py  signal_processor.py
channel-service/: Dockerfile  config.yml  pyproject.toml
channel-service/src/channel_service/: __init__.py  app.py  config.py  main.py  mcp_main.py
channel-service/src/channel_service/mcp/: __init__.py  client.py  config.py
channel-service/src/channel_service/router/: router.py
channel-service/src/channel_service/services/: __init__.py  action_consumer.py  channel_service.py  napcat_ws_gateway.py  stream_models.py
channel-service/tests/: test_action_consumer.py  test_adapter_service.py  test_mcp_client.py  test_mcp_main.py  test_napcat_gateway.py  test_router.py
cli_channel/: Dockerfile  cli_server.py
cli_client/: cli_client.py
cli_server/: cli_server.py
docs/: 0.boundary.md  1.system-design.md  2.project-structure.md  3.message-loop.md  3.runtime-flow.md  adapter-service.md  agent-service.md  aichan.md  channel-service.md  configuration.md  hub-service.md  project-structure.md  qq-adapter-service.md  system-design.md
gateway/channels/cli/: Dockerfile  cli.py  cli_gateway.py  cli_server.py  requirements.txt
hub-service/: Dockerfile  config.yml  pyproject.toml
hub-service/src/hub_service/: __init__.py  app.py  config.py  main.py
hub-service/src/hub_service/router/: __init__.py  router.py  schemas.py
hub-service/src/hub_service/services/: __init__.py  errors.py  event_consumer.py  outbound_client.py  redis_stream.py  reminder_service.py  session_coordinator.py  stream_models.py
hub-service/tests/: test_event_consumer.py  test_outbound_client.py  test_pipeline.py  test_router.py  test_session_coordinator.py
mcp_servers/: .dockerignore  pyproject.toml
mcp_servers/cli/: Dockerfile  app.py  mcp_server.py  message_store.py  models.py  pyproject.toml  server.py  settings.py
mcp_servers/cli/src/cli/: __init__.py  app.py  mcp_server.py  message_store.py  models.py  server.py  settings.py
mcp_servers/cli/tests/: test_message_store.py
qq-adapter-service/: Dockerfile  config.yml  pyproject.toml
qq-adapter-service/src/qq_adapter_service/: __init__.py  app.py  config.py  main.py  mcp_main.py
qq-adapter-service/src/qq_adapter_service/mcp/: __init__.py  client.py
qq-adapter-service/src/qq_adapter_service/router/: __init__.py  router.py  schemas.py
qq-adapter-service/src/qq_adapter_service/services/: __init__.py  adapter_service.py  downstream_ws_client.py  napcat_ws_gateway.py
qq-adapter-service/tests/: test_adapter_service.py  test_mcp_client.py  test_mcp_main.py  test_router.py
