[project]
name = "aichan"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "brain",
    "core",
    "fastapi>=0.115.0",
    "langchain-core>=1.2.20",
    "langchain-openai>=1.1.11",
    "memory",
    "plugins",
    "synapse",
    "uvicorn>=0.30.0",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
brain = { workspace = true }
core = { workspace = true }
memory = { workspace = true }
plugins = { workspace = true }
synapse = { workspace = true }

