[project]
name = "aichan"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "brain",
    "core",
    "langchain-core>=1.2.20",
    "langchain-openai>=1.1.11",
    "memory",
    "nexus",
    "plugins",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
brain = { workspace = true }
core = { workspace = true }
memory = { workspace = true }
nexus = { workspace = true }
plugins = { workspace = true }

