[project]
name = "adapter-service"
version = "0.1.0"
description = "QQ adapter FastAPI service managed by uv."
authors = [
    { name = "????", email = "tamakara@qq.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "httpx>=0.28.1",
    "mcp>=1.13.0",
    "nonebot-adapter-onebot>=2.4.6",
    "pydantic>=2.11.7",
    "redis>=6.2.0",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.34.0",
    "websockets>=16.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
]

[project.scripts]
adapter-service = "adapter_service.main:main"
adapter-mcp = "adapter_service.mcp_main:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
