[project]
name = "aichan"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "agent",
    "core",
    "fastapi>=0.118.0",
    "langchain-core>=1.2.20",
    "langchain-openai>=1.1.11",
    "memory",
    "hub",
    "plugins",
    "prompt-toolkit>=3.0.36",
    "uvicorn>=0.37.0",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
agent = { workspace = true }
core = { workspace = true }
memory = { workspace = true }
hub = { workspace = true }
plugins = { workspace = true }

