[project]
name = "hub-service"
version = "0.1.0"
description = "QQ reminder hub service managed by uv."
authors = [
    { name = "魂辛カラ", email = "tamakara@qq.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "redis>=6.2.0",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.34.0",
    "websockets>=16.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.4",
]

[project.scripts]
hub-service = "hub_service.main:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
