[project]
name = "mcp_hub"
version = "0.1.0"
description = "MCPHub package for AIChan"
authors = [
    { name = "tamakara", email = "tamakara@qq.com" }
]
requires-python = ">=3.10"
dependencies = [
    "core",
    "langchain-core>=1.2.20",
    "mcp>=1.27.0",
    "pydantic>=2.12.5",
]

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"

[tool.uv.sources]
core = { workspace = true }
