[project]
name = "cli-mcp-server"
version = "0.1.0"
description = "CLI MCP server module"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.118.0",
    "httpx>=0.28.0",
    "httpx-sse>=0.4.0",
    "loguru>=0.7.3",
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "uvicorn>=0.37.0",
]

[tool.uv]
package = false
